Changelog
=========

1.0.2
-----

* IE7 css fixes (upload button was uggly)
  macadames 2010-09-22

* fix content-type header with FireFox xhr upload
  sometimes is missing
  macadames 2010-09-24

* don't use unicode in setFileName
  because it break Archetypes File Field download (unicode decode error)
  macadames 2010-09-24

1.0.1
-----

* fix set_id or check_id methods
  now called on context, no more on aq_parent(context)
  macadames 2010-09-14

* slow down the removing of progressBar
  to see something even when Plone is too fast :-)
  macadames 2010-09-15  

* try to find the good content_type for uploaded files
  using plone mime_types_registry when
  mimetypes.guess_type(file_name) returns (None, None)
  macadames 2010-09-17

* fix strange ATFile behavior with content_types
  when passing mutator(data, content_type=content_type)
  the content_type is not always good
  macadames 2010-09-17

* Don't use unicode in setFileName
  macadames 2010-09-24

* fix content-type header with FireFox xhr upload
 (sometimes is missing)
  macadames 2010-09-24

1.0.0
-----

- fix jquery.uploadify on MSIE with a temp workaround
  see ticket : https://dev.plone.org/plone/ticket/10894
  macadames - 2010/09/02

- using different ids for each uploader methods launchers
  since we could have different uploaders in a same page
  example : an images uploader portlet, a video uploader portlet
  macadames - 2010/09/02

- remove the cookie authentication method
  with jquery.uploadify (it's not secure to send the cookie in all requests)
  Just keep the old PloneFlashUpload method (ticket)
  macadames - 2010/09/02

- many improvements around fileuploader.js (fork) :
  autoUpload option added 
  onAfterSelect option added
  refactoristion with these new options
  macadames - 2010/09/02

- added fileuploader.js jscript launcher
  macadames - 2010/08/25

- change flashupload jscript launchers
  to allow multiple uploaders in same page
  macadames - 2010/08/25
